Nuevos endpoints para consultas propias y retoques